<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Appume</string>
    <string name="action_settings">Settings</string>
    
    <string name="whatIsAppume">What Is An Appume?</string>
    <string name="whoAmI">Who Am I?</string>
    <string name="certifications">Certifications</string>
    <string name="skills">Skills</string>
    <string name="education">Education</string>
    <string name="experience">Experience</string>
    <string name="recommendations">Recommendations</string>
    <string name="contactMe">Contact Me</string>
    
    <string name="xcelerateSolutions">Xcelerate\nSolutions</string>
    <string name="dominionEnterprises">Dominion\nEnterprises</string>
    <string name="cdiMarineCompany">CDI Marine Company</string>
    <string name="saic">SAIC</string>
    <string name="truestone">Truestone</string>
    <string name="uspto">USPTO</string>
    <string name="norfolkState">Norfolk State</string>
    <string name="ikeWCS">Eisenhower (WCS)</string>
    <string name="ikeTech">Eisenhower (Technician)</string>
    <string name="ikePatArm">Eisenhower (Patrolman/Armorer)</string>

    <string name="jermaineJemmott">Jermaine Jemmott</string>
    <string name="frankBird">Frank M. Bird</string>
    <string name="leeAsh">Lee Ash</string>
    
    <string name="mainMenu">Main Menu</string>

</resources>
