<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#D1EEEE"
    tools:context=".Appume" >

    <ImageView
      	android:id="@+id/imgBanner"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:src="@drawable/appume_banner" />
 
    <TextView
	    android:id="@+id/rec_frankbird_header"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/imgBanner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
		android:text="Frank M. Bird"
	    android:textSize="20sp" />

	<TextView
        android:id="@+id/rec_frankbird_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rec_frankbird_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="Daniel is a very skilled developer.  He was brought in to help maintain/upgrade a system written by other programmers.  The system code was complex and difficult to follow.  He quickly learned the system logic and was able to make meaningful contributions.  I would recommend him without reservation."
        android:textSize="14sp" />

	<LinearLayout
        android:id="@+id/llPrevNext"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_above="@+id/llRecommendationsMainMenu"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnPrev"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="prevPage"
            android:text="@string/jermaineJemmott"
            android:textSize="14sp"
            android:background="#D1EEEE"
            android:textColor="#454545" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="nextPage"
            android:text="@string/leeAsh"
            android:textSize="14sp"
            android:background="#D1EEEE"
            android:textColor="#454545" />
    </LinearLayout>

	<LinearLayout
        android:id="@+id/llRecommendationsMainMenu"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnRecommendations"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="recommendationsMenu"
            android:text="@string/recommendations"
            android:textSize="14sp"
            android:background="#D1EEEE"
            android:textColor="#454545" />

        <Button
            android:id="@+id/btnMainMenu"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="mainMenu"
            android:text="@string/mainMenu"
            android:textSize="14sp"
            android:background="#D1EEEE"
            android:textColor="#454545" />
    </LinearLayout>
	
</RelativeLayout>