<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#D1EEEE"
    tools:context=".Appume" >

    <ImageView
        android:id="@+id/imgBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/appume_banner" />
    
    <TextView
        android:id="@+id/experience_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgBanner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
		android:text="Experience"
        android:textSize="20sp"
        android:textColor="#454545" />
    
    <ListView
        android:id="@+id/experienceList"
        android:layout_width="wrap_content"
        android:layout_height="338dp"
        android:layout_above="@+id/llMainMenu"
        android:layout_below="@+id/experience_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textColor="#454545" >

    </ListView>

    <LinearLayout
        android:id="@+id/llMainMenu"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_above="@+id/llPrevNext"
        android:orientation="horizontal" >

        <View
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:background="#D1EEEE" />

        <Button
            android:id="@+id/btnMainMenu"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="mainMenu"
            android:text="@string/mainMenu"
            android:textSize="14sp"
            android:background="#D1EEEE"
            android:textColor="#454545" />
    </LinearLayout>
    
	<LinearLayout
        android:id="@+id/llPrevNext"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnPrevious"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="prevPage"
            android:text="@string/education"
            android:textSize="14sp"
            android:background="#D1EEEE"
            android:textColor="#454545" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="nextPage"
            android:text="@string/recommendations"
            android:textSize="14sp"
            android:background="#D1EEEE"
            android:textColor="#454545" />
    </LinearLayout>
    
</RelativeLayout>
