<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#D1EEEE"
    tools:context=".Appume" >

    <ImageView
      	android:id="@+id/imgBanner"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:src="@drawable/appume_banner" />
 
	<ScrollView
	    android:id="@+id/svIkeWCS"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_below="@+id/imgBanner"
	    android:background="#D1EEEE" >

    	<RelativeLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content" >
      
		    <TextView
	            android:id="@+id/expikewcs_header"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="32dp"
			    android:text="Work Center Supervisor\t\t\t2008-2009"
	            android:textSize="16sp"
	            android:textStyle="bold" />
		
		    <TextView
	            android:id="@+id/expikewcs_comploc"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/expikewcs_header"
	            android:text="U. S. Navy (USS Dwight D. Eisenhower)\nNorfolk, VA"
	            android:textSize="16sp" />
		    
		    <TextView
	            android:id="@+id/expikewcs_desc_1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/expikewcs_comploc"
	            android:text="*  Provided knowledge and experience to six employees in all aspects of the organization's maintenance program, which resulted in completion of 60 maintenance requirements and a 100% score during an inspection"
	            android:textSize="16sp" />
		
		    <TextView
	            android:id="@+id/expikewcs_desc_2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/expikewcs_desc_1"
	            android:text="*  Prepared Welcome Aboard packages for over 150 newly assigned employees with resources to relocate and adapt into the new organization"
	            android:textSize="16sp" />
		
		</RelativeLayout>
	</ScrollView>
	
		<LinearLayout
        android:id="@+id/llPrevNext"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_above="@+id/llExperienceMainMenu"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnPrev"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="prevPage"
            android:text="@string/norfolkState"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="#D1EEEE"
            android:textColor="#454545" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="nextPage"
            android:text="@string/ikeTech"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="#D1EEEE"
            android:textColor="#454545" />
    </LinearLayout>

	<LinearLayout
        android:id="@+id/llExperienceMainMenu"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnExperience"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="experienceMenu"
            android:text="@string/experience"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="#D1EEEE"
            android:textColor="#454545" />

        <Button
            android:id="@+id/btnMainMenu"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="mainMenu"
            android:text="@string/mainMenu"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="#D1EEEE"
            android:textColor="#454545" />
    </LinearLayout>
	
</RelativeLayout>
