<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1EEEE"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ExpUSPTO" >

    <ImageView
      	android:id="@+id/imgBanner"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:src="@drawable/appume_banner" />
 
	<ScrollView
	    android:id="@+id/svUSPTO"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_below="@+id/imgBanner"
	    android:background="#D1EEEE" >

    	<RelativeLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content" >
  
        <TextView
            android:id="@+id/expuspto_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            
            android:layout_marginTop="32dp"
		    android:text="Patent Examiner\t\t\t\t2011"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/expuspto_comploc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/expuspto_header"
            android:text="United States Patent and Trademark Office\nAlexandria, VA"
            android:textSize="16sp" />
    
        <TextView
            android:id="@+id/expuspto_desc_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/expuspto_comploc"
            android:text="*  Reviewed patent applications to determine compliance with Federal law"
            android:textSize="16sp" />

		<TextView
            android:id="@+id/expuspto_desc_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/expuspto_desc_1"
            android:text="*  Researched relevant technologies to apply references to the claimed invention"
            android:textSize="16sp" />
		
		<TextView
            android:id="@+id/expuspto_desc_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/expuspto_desc_2"
            android:text="*  Communicated findings and decisions to patent practitioners and/or inventors"
            android:textSize="16sp" />
		
    	</RelativeLayout>
	</ScrollView>
	
	<LinearLayout
        android:id="@+id/llPrevNext"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_above="@+id/llExperienceMainMenu"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnPrev"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="prevPage"
            android:text="@string/truestone"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="#D1EEEE"
            android:textColor="#454545" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="nextPage"
            android:text="@string/norfolkState"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="#D1EEEE"
            android:textColor="#454545" />
    </LinearLayout>

	<LinearLayout
        android:id="@+id/llExperienceMainMenu"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnExperience"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="experienceMenu"
            android:text="@string/experience"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="#D1EEEE"
            android:textColor="#454545" />

        <Button
            android:id="@+id/btnMainMenu"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="mainMenu"
            android:text="@string/mainMenu"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="#D1EEEE"
            android:textColor="#454545" />
    </LinearLayout>
	
</RelativeLayout>
