<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#D1EEEE"
    tools:context=".Appume" >

    <ImageView
        android:id="@+id/imgBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/appume_banner" />
    
	<TextView
	    android:id="@+id/certifications_header"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/imgBanner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="Certifications"
	    android:textSize="20sp"
	    android:textColor="#454545" />

	<TextView
	    android:id="@+id/certifications_1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/certifications_header"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="32dp"
	    android:text="Active DoD Secret Clearance"
	    android:textSize="14sp"
	    android:textColor="#454545" />

	<TextView
	    android:id="@+id/certifications_2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/certifications_1"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="32dp"
	    android:text="CompTIA Security+ CE (January 2013)"
	    android:textSize="14sp"
	    android:textColor="#454545" />

	<TextView
	    android:id="@+id/certifications_3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@+id/certifications_2"
	    android:layout_marginTop="32dp"
	    android:text="Oracle Certified Associate, Java SE 7 Programmer (January 2014)"
	    android:textSize="14sp"
	    android:textColor="#454545" />
	
	<LinearLayout
        android:id="@+id/llMainMenu"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_above="@+id/llPrevNext"
        android:orientation="horizontal" >

        <View
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:background="#D1EEEE" />

        <Button
            android:id="@+id/btnMainMenu"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="mainMenu"
            android:text="@string/mainMenu"
            android:background="#D1EEEE"
            android:textColor="#454545" />
    </LinearLayout>
    
	<LinearLayout
        android:id="@+id/llPrevNext"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnPrevious"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="prevPage"
            android:text="@string/whoAmI"
            android:background="#D1EEEE"
            android:textColor="#454545" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="nextPage"
            android:text="@string/skills"
            android:background="#D1EEEE"
            android:textColor="#454545" />
    </LinearLayout>
	

</RelativeLayout>