<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1EEEE"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ExpNorfolkState" >

    <ImageView
      	android:id="@+id/imgBanner"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:src="@drawable/appume_banner" />
 
	<ScrollView
	    android:id="@+id/svNorfolkState"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_below="@+id/imgBanner"
	    android:background="#D1EEEE" >

    	<RelativeLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content" >
        
	        <TextView
	            android:id="@+id/expnsu_header"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="32dp"
			    android:text="Laboratory Assistant\t\t\t\t2010"
	            android:textSize="16sp"
	            android:textStyle="bold" />
	
	        <TextView
	            android:id="@+id/expnsu_comploc"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/expnsu_header"
	            android:text="Norfolk State University\nNorfolk, VA"
	            android:textSize="16sp" />
	    
	        <TextView
	            android:id="@+id/expnsu_desc_1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/expnsu_comploc"
	            android:text="*  Developed desktop application that allowed an user to read an XML electronic medical record"
	            android:textSize="16sp" />
	
			<TextView
	            android:id="@+id/expnsu_desc_2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/expnsu_desc_1"
	            android:text="*  Authored three papers that were published in three separate journals"
	            android:textSize="16sp" />
			
			<TextView
	            android:id="@+id/expnsu_desc_3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/expnsu_desc_2"
	            android:text="*  Presented two papers on behalf of one professor and five undergraduate students at a conference in Las Vegas, NV"
	            android:textSize="16sp" />
			
			<TextView
	            android:id="@+id/expnsu_desc_4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/expnsu_desc_3"
	            android:text="*  Assisted faculty in research and tutoring"
	            android:textSize="16sp" />
			
			<TextView
	            android:id="@+id/expnsu_desc_5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/expnsu_desc_4"
	            android:text="* Skills/Technologies Used: Java, XML, PGP, XML Digital Signature"
	            android:textSize="16sp" />
		
    	</RelativeLayout>
	</ScrollView>
	
	<LinearLayout
        android:id="@+id/llPrevNext"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_above="@+id/llExperienceMainMenu"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnPrev"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="prevPage"
            android:text="@string/uspto"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="#D1EEEE"
            android:textColor="#454545" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="nextPage"
            android:text="@string/ikeWCS"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="#D1EEEE"
            android:textColor="#454545" />
    </LinearLayout>

	<LinearLayout
        android:id="@+id/llExperienceMainMenu"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnExperience"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="experienceMenu"
            android:text="@string/experience"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="#D1EEEE"
            android:textColor="#454545" />

        <Button
            android:id="@+id/btnMainMenu"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="mainMenu"
            android:text="@string/mainMenu"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="#D1EEEE"
            android:textColor="#454545" />
    </LinearLayout>
	
</RelativeLayout>
